--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "mongoose": "^5.8.0",
-        "nodemon": "^2.0.1"
+        "nodemon": "^2.0.1",
+        "uuid": "^3.3.3"
     }
 }
